updated with code

--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,39 @@
+
+@article{blake_thermodynamic_1996,
+	title = {Thermodynamic {Effects} of {Formamide} on {DNA} {Stability}},
+	volume = {24},
+	issn = {0305-1048},
+	url = {https://doi.org/10.1093/nar/24.11.2095},
+	doi = {10.1093/nar/24.11.2095},
+	abstract = {Formamide lowers melting temperatures ( Tm ) of DNAs linearly by 2.4–2.9°C/mole of formamide ( CF ) depending on the (G+C) composition, helix conformation and state of hydration. The inherent cooperativity of melting is unaffected by the denaturant. dTm / dCF for 11 plasmid domains of 0.23 \&lt; (G+C) \&lt; 0.71 generally fit to a linear dependence on (G+C)-content, which, however, is consistent with a (G+C)-independent alteration in the apparent equilibrium constant for thermally induced helix↔coil transitions. Results indicate that formamide has a destabilizing effect on the helical state, and that sequence-dependent variations in hydration patterns are primarily responsible for small variations in sensitivity to the denaturant. The average unit transition enthalpy  exhibits a biphasic dependence on formamide concentration. The initial drop of −0.8 kcal/mol bp at low formamide concentrations is attributable to a  for exchange of solvent in the vicinity of the helix: displacement by formamide of weakly bound hydrate or counterion. The phenomenological effects are equivalent to lowering the bulk counterion concentration. Poly(dA·dT) exhibits a much lower sensitivity to formamide, due to the specific pattern of tightly bound, immobilized water bridges that buttress the helix from within the narrow minor groove. Tracts of three (A·T)-pairs behave normally, but tracts of six exhibit the same level of reduced sensitivity as the polymer, suggesting a conformational shift as tracts are elongated beyond some critical length [  McCarthy,J.G. and Rich,A. (1991) Nucleic Acids Res . 19, 3421–3429  ].},
+	number = {11},
+	urldate = {2024-07-12},
+	journal = {Nucleic Acids Research},
+	author = {Blake, R. D. and Delcourt, Scott G.},
+	month = jun,
+	year = {1996},
+	pages = {2095--2103},
+	file = {Full Text PDF:/Users/danielfurth/Zotero/storage/C3CPXZ5S/Blake and Delcourt - 1996 - Thermodynamic Effects of Formamide on DNA Stabilit.pdf:application/pdf;Snapshot:/Users/danielfurth/Zotero/storage/89G6SSG4/2384382.html:text/html},
+}
+
+@article{fuchs_effects_2010,
+	title = {Effects of formamide on the thermal stability of {DNA} duplexes on biochips},
+	volume = {397},
+	issn = {1096-0309},
+	doi = {10.1016/j.ab.2009.09.044},
+	abstract = {In molecular biology, formamide (FA) is a commonly used denaturing agent for DNA. Although its influence on DNA duplex stability in solution is well established, little is known about immobilized DNA on microarrays. We measured thermal denaturation curves for oligonucleotides immobilized by two standard protocols: thiol self-assembling and pyrrole electrospotting. A decrease of the DNA denaturation temperature with increasing FA fraction of the solvent was observed on sequences with mutations for both surface chemistries. The average dissociation temperature decrease was found to be -0.58+/-0.05 degrees C/\% FA (v/v) independently of grafting chemistry and probe sequence.},
+	language = {eng},
+	number = {1},
+	journal = {Analytical Biochemistry},
+	author = {Fuchs, Julia and Dell'Atti, Daniela and Buhot, Arnaud and Calemczuk, Roberto and Mascini, Marco and Livache, Thierry},
+	month = feb,
+	year = {2010},
+	pmid = {19796625},
+	keywords = {DNA, Formamides, Nucleic Acid Denaturation, Oligonucleotide Array Sequence Analysis, Temperature},
+	pages = {132--134},
+}
+
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
